# nitrochat-customer-backend

./: .dockerignore  .env.example  Dockerfile  Documentation.md  config.py  main.py  pyproject.toml
api/routes/: chat.py
routes/: chat.py
schemas/: language.py  request.py
services/: bot_settings.py  chat.py  fallback.py  language.py
