[project]
name = "nitrochat-customer-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain-community>=0.4.1",
    "langchain[google-genai]>=1.2.10",
    "python-dotenv>=1.2.2",
]
